--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://balomus.github.io/random-quote-machine",
+  "homepage": "https://balomus.github.io/random-quote-machine",
   "name": "random-quote-machine",
   "version": "0.1.0",
   "private": true,
